Remove background grid + fix alignment of subplots
Use cowplot::plot_grid to align different subplots
Switch to theme_light() and remove background grid.
Add chromosome name to x axis label.
Add axis ticks and labels for the coverage plot.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,11 @@
 
 export(plotCoverage)
 export(plotTranscripts)
-import(GenomicFeatures)
 import(GenomicRanges)
 import(IRanges)
+import(cowplot)
 import(dplyr)
 import(ggplot2)
 import(grid)
-import(gridExtra)
+import(plyr)
 import(rtracklayer)
