--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: wiggleplotr
 Title: Make read coverage plots from BigWig files
-Version: 0.1
+Version: 0.99.1
 Author: Kaur Alasoo [aut, cre]
-Maintainer: Kaur Alasoo <kauralasoo@gmail.com>
+Maintainer: Kaur Alasoo <kaur.alasoo@gmail.com>
 Description: Tools to visualise read coverage from sequencing experiments together with genomic annotations (genes, transcripts, peaks). Introns of long transcripts can be shrunken to a fixed length for better visualisation of exonic read coverage.
 Depends:
-    R (>= 3.0.2)
+    R (>= 3.3)
 Imports:
     dplyr,
     ggplot2 (>= 2.2.0),
@@ -23,3 +23,11 @@ RoxygenNote: 5.0.1
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
+biocViews: Coverage,
+    RNASeq,
+    ChIPSeq,
+    Sequencing,
+    Visualization,
+    GeneExpression,
+    Transcription,
+    AlternativeSplicing
