--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Make read coverage plots from BigWig files
 Version: 0.99.1
 Author: Kaur Alasoo [aut, cre]
 Maintainer: Kaur Alasoo <kaur.alasoo@gmail.com>
-Description: Tools to visualise read coverage from sequencing experiments together with genomic annotations (genes, transcripts, peaks). Introns of long transcripts can be shrunken to a fixed length for better visualisation of exonic read coverage.
+Description: Tools to visualise read coverage from sequencing experiments together with genomic annotations (genes, transcripts, peaks). Introns of long transcripts can be rescaled to a fixed length for better visualisation of exonic read coverage.
 Depends:
     R (>= 3.3)
 Imports:
@@ -23,7 +23,8 @@ RoxygenNote: 5.0.1
 Suggests: knitr,
     rmarkdown,
     biomaRt,
-    GenomicFeatures
+    GenomicFeatures,
+    testthat
 VignetteBuilder: knitr
 biocViews: Coverage,
     RNASeq,
