--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,11 @@
 
 export(getGenotypePalette)
 export(plotCoverage)
+export(plotCoverageFromEnsembldb)
+export(plotCoverageFromUCSC)
 export(plotTranscripts)
+export(plotTranscriptsFromEnsembldb)
+export(plotTranscriptsFromUCSC)
 import(ggplot2)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,"row_number")
