Fix problems related to filter classes being removed from ensembldb
- Import GenenameFilter class from AnnotationFilter.
- Import various methods from ensembldb.
- Small changes in the vignette.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: wiggleplotr
 Title: Make read coverage plots from BigWig files
-Version: 0.99.6
+Version: 0.99.7
 Author: Kaur Alasoo [aut, cre]
 Maintainer: Kaur Alasoo <kaur.alasoo@gmail.com>
 Description: Tools to visualise read coverage from sequencing experiments together with genomic annotations (genes, transcripts, peaks). Introns of long transcripts can be rescaled to a fixed length for better visualisation of exonic read coverage.
@@ -16,7 +16,9 @@ Imports:
     purrr,
     S4Vectors,
     IRanges,
-    GenomeInfoDb
+    GenomeInfoDb,
+    ensembldb,
+    AnnotationFilter
 License: Apache License 2.0
 LazyData: true
 RoxygenNote: 6.0.1
@@ -25,7 +27,6 @@ Suggests: knitr,
     biomaRt,
     GenomicFeatures,
     testthat,
-    ensembldb,
     EnsDb.Hsapiens.v86,
     org.Hs.eg.db,
     TxDb.Hsapiens.UCSC.hg38.knownGene,
