--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,9 @@ export(plotTranscripts)
 export(plotTranscriptsFromEnsembldb)
 export(plotTranscriptsFromUCSC)
 import(ggplot2)
+importFrom(AnnotationFilter,GenenameFilter)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,"row_number")
+importMethodsFrom(ensembldb,cdsBy)
+importMethodsFrom(ensembldb,exonsBy)
+importMethodsFrom(ensembldb,transcripts)
