--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,41 +1,23 @@
 Package: wiggleplotr
 Title: Make read coverage plots from BigWig files
-Version: 0.99.6
+Version: 0.99.7
 Author: Kaur Alasoo [aut, cre]
 Maintainer: Kaur Alasoo <kaur.alasoo@gmail.com>
-Description: Tools to visualise read coverage from sequencing experiments together with genomic annotations (genes, transcripts, peaks). Introns of long transcripts can be rescaled to a fixed length for better visualisation of exonic read coverage.
-Depends:
-    R (>= 3.4)
-Imports:
-    dplyr,
-    ggplot2 (>= 2.2.0),
-    GenomicRanges,
-    rtracklayer,
-    cowplot,
-    assertthat,
-    purrr,
-    S4Vectors,
-    IRanges,
-    GenomeInfoDb
+Description: Tools to visualise read coverage from sequencing
+        experiments together with genomic annotations (genes,
+        transcripts, peaks). Introns of long transcripts can be
+        rescaled to a fixed length for better visualisation of exonic
+        read coverage.
+Depends: R (>= 3.4)
+Imports: dplyr, ggplot2 (>= 2.2.0), GenomicRanges, rtracklayer,
+        cowplot, assertthat, purrr, S4Vectors, IRanges, GenomeInfoDb
 License: Apache License 2.0
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: knitr,
-    rmarkdown,
-    biomaRt,
-    GenomicFeatures,
-    testthat,
-    ensembldb,
-    EnsDb.Hsapiens.v86,
-    org.Hs.eg.db,
-    TxDb.Hsapiens.UCSC.hg38.knownGene,
-    AnnotationDbi
+Suggests: knitr, rmarkdown, biomaRt, GenomicFeatures, testthat,
+        ensembldb, EnsDb.Hsapiens.v86, org.Hs.eg.db,
+        TxDb.Hsapiens.UCSC.hg38.knownGene, AnnotationDbi,
+        AnnotationFilter
 VignetteBuilder: knitr
-biocViews: Coverage,
-    RNASeq,
-    ChIPSeq,
-    Sequencing,
-    Visualization,
-    GeneExpression,
-    Transcription,
-    AlternativeSplicing
+biocViews: Coverage, RNASeq, ChIPSeq, Sequencing, Visualization,
+        GeneExpression, Transcription, AlternativeSplicing
