Add ImmunoOncology biocViews term

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: wiggleplotr
 Title: Make read coverage plots from BigWig files
-Version: 1.7.0
+Version: 1.7.1
 Author: Kaur Alasoo [aut, cre]
 Maintainer: Kaur Alasoo <kaur.alasoo@gmail.com>
 Description: Tools to visualise read coverage from sequencing
@@ -19,5 +19,5 @@ Suggests: knitr, rmarkdown, biomaRt, GenomicFeatures, testthat,
         TxDb.Hsapiens.UCSC.hg38.knownGene, AnnotationDbi,
         AnnotationFilter
 VignetteBuilder: knitr
-biocViews: Coverage, RNASeq, ChIPSeq, Sequencing, Visualization,
+biocViews: ImmunoOncology, Coverage, RNASeq, ChIPSeq, Sequencing, Visualization,
         GeneExpression, Transcription, AlternativeSplicing
