--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ export(plotTranscriptsFromUCSC)
 import(ggplot2)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,"row_number")
+importFrom(ggpubr,"annotate_figure")
