added roxygen stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(generateCoveragePlotData)
 export(generateTxStructurePlotData)
 export(getGenotypePalette)
+export(makeCoveragePlot)
 export(makeManhattanPlot)
 export(plotCoverage)
 export(plotCoverageFromEnsembldb)
 export(plotCoverageFromUCSC)
+export(plotTranscriptStructure)
 export(plotTranscripts)
 export(plotTranscriptsFromEnsembldb)
 export(plotTranscriptsFromUCSC)
